--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
             <version>3.25.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.security</groupId>-->
+<!--            <artifactId>spring-security-cas</artifactId>-->
+<!--        </dependency>-->
 
     </dependencies>
 
