--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://localhost:3306/productserviceKrishna
-spring.datasource.username=productserviceKrishna
-#spring.datasource.password=ThePassword
+spring.datasource.url=${Database_URL}
+spring.datasource.username=${Database_USERNAME}
+spring.datasource.password=${Database_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
-server.port = 8000
+server.port = ${SERVER_PORT}
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${Issuer_URI}
+logging.level.org.springframework.security=trace
