--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
-spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=${Database_URL}
-spring.datasource.username=${Database_USERNAME}
-spring.datasource.password=${Database_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=${Database_URL}
+#spring.datasource.username=${Database_USERNAME}
+#spring.datasource.password=${Database_PASSWORD}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql = true
+#server.port = ${SERVER_PORT}
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=${Issuer_URI}
+#logging.level.org.springframework.security=trace
+spring.datasource.url=jdbc:mysql://localhost:3306/productserviceKrishna
+spring.datasource.username=productserviceKrishna
+#spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
-server.port = ${SERVER_PORT}
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${Issuer_URI}
+server.port = 8000
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000/oauth/token
 logging.level.org.springframework.security=trace
